Tidied the code structure
Including deleting unused functions, organizing imports, renameing functions, etc. Also did a slight (~10-15%) speed-up.

--- a/notebooks/test_binary.ipynb
+++ b/notebooks/test_binary.ipynb
@@ -4,7 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Test BinaryBART"
+        "## Test BinaryBART\n",
+        "<sup>*</sup>Including ProbitBART and LogisticBART"
       ]
     },
     {
@@ -18,10 +19,9 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import log_loss, accuracy_score, roc_auc_score\n",
         "from sklearn.datasets import make_classification, load_breast_cancer, load_wine\n",
-        "from sklearn.preprocessing import StandardScaler\n",
         "import pandas as pd\n",
         "from bart_playground import *\n",
-        "from bart_playground.bart import DefaultBART, BinaryBART\n",
+        "from bart_playground.bart import DefaultBART, ProbitBART\n",
         "import bartz"
       ]
     },
@@ -87,7 +87,7 @@
         "        y_pred_prob = np.clip(btpred, 1e-9, 1 - 1e-9)\n",
         "        y_pred = (y_pred_prob > 0.5).astype(int)\n",
         "        \n",
-        "    elif model_name == \"BinaryBART\" or model_name == \"LogisticBART\":\n",
+        "    elif model_name == \"ProbitBART\" or model_name == \"LogisticBART\":\n",
         "        # Proper binary BART\n",
         "        model.fit(X_train, y_train)\n",
         "        proba_output = model.predict_proba(X_test)\n",
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -142,30 +142,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dataset: Synthetic, X shape: (400, 8), y shape: (400,)\n",
-            "Dataset: Breast Cancer, X shape: (569, 30), y shape: (569,)\n",
-            "Dataset: Wine Binary, X shape: (178, 13), y shape: (178,)\n"
+            "Dataset: Synthetic\n",
+            "X shape: (400, 8), y shape: (400,)\n",
+            "y distribution: {0: 0.5, 1: 0.5}\n",
+            "Dataset: Breast Cancer\n",
+            "X shape: (569, 30), y shape: (569,)\n",
+            "y distribution: {1: 0.6274165202108963, 0: 0.37258347978910367}\n",
+            "Dataset: Wine Binary\n",
+            "X shape: (178, 13), y shape: (178,)\n",
+            "y distribution: {0: 0.6685393258426966, 1: 0.33146067415730335}\n"
           ]
         }
       ],
       "source": [
-        "# Print dataset shapes\n",
         "for name, (X, y) in datasets.items():\n",
-        "    print(f\"Dataset: {name}, X shape: {X.shape}, y shape: {y.shape}\")"
+        "    # Print dataset shapes\n",
+        "    print(f\"Dataset: {name}\\nX shape: {X.shape}, y shape: {y.shape}\")\n",
+        "    # Print 0-1 distribution of y\n",
+        "    print(f\"y distribution: {pd.Series(y).value_counts(normalize=True).to_dict()}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "INFO:2025-06-03 18:21:14,523:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+            "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -176,6 +192,8 @@
             "    Acc: 0.900, LogLoss: 2.072, AUC: 0.900\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.858, LogLoss: 0.341, AUC: 0.932\n",
+            "  Training Bartz...\n",
+            "    Acc: 0.883, LogLoss: 0.329, AUC: 0.949\n",
             "  Training DefaultBART...\n"
           ]
         },
@@ -183,7 +201,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:14<00:00, 68.64it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:14<00:00, 69.45it/s]\n"
           ]
         },
         {
@@ -191,14 +209,14 @@
           "output_type": "stream",
           "text": [
             "    Acc: 0.867, LogLoss: 0.319, AUC: 0.952\n",
-            "  Training BinaryBART...\n"
+            "  Training ProbitBART...\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 92.03it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 93.35it/s]\n"
           ]
         },
         {
@@ -213,9 +231,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 91.17it/s]\n",
-            "INFO:2025-06-03 16:27:23,076:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-            "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 103.86it/s]\n"
           ]
         },
         {
@@ -223,14 +239,14 @@
           "output_type": "stream",
           "text": [
             "    Acc: 0.867, LogLoss: 0.326, AUC: 0.936\n",
-            "  Training Bartz...\n",
-            "    Acc: 0.883, LogLoss: 0.329, AUC: 0.949\n",
             "\n",
             "=== Testing on Breast Cancer ===\n",
             "  Training RFClassifier...\n",
             "    Acc: 0.924, LogLoss: 1.575, AUC: 0.920\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.942, LogLoss: 0.118, AUC: 0.989\n",
+            "  Training Bartz...\n",
+            "    Acc: 0.947, LogLoss: 0.130, AUC: 0.991\n",
             "  Training DefaultBART...\n"
           ]
         },
@@ -238,7 +254,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 96.31it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 98.15it/s]\n"
           ]
         },
         {
@@ -246,14 +262,14 @@
           "output_type": "stream",
           "text": [
             "    Acc: 0.936, LogLoss: 0.146, AUC: 0.984\n",
-            "  Training BinaryBART...\n"
+            "  Training ProbitBART...\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 99.08it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 99.14it/s]\n"
           ]
         },
         {
@@ -268,7 +284,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 91.51it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 110.02it/s]\n"
           ]
         },
         {
@@ -276,14 +292,14 @@
           "output_type": "stream",
           "text": [
             "    Acc: 0.965, LogLoss: 0.113, AUC: 0.991\n",
-            "  Training Bartz...\n",
-            "    Acc: 0.947, LogLoss: 0.130, AUC: 0.991\n",
             "\n",
             "=== Testing on Wine Binary ===\n",
             "  Training RFClassifier...\n",
             "    Acc: 0.926, LogLoss: 1.535, AUC: 0.903\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.926, LogLoss: 0.519, AUC: 0.950\n",
+            "  Training Bartz...\n",
+            "    Acc: 0.944, LogLoss: 0.117, AUC: 0.994\n",
             "  Training DefaultBART...\n"
           ]
         },
@@ -291,7 +307,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:07<00:00, 142.74it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:07<00:00, 140.94it/s]\n"
           ]
         },
         {
@@ -299,14 +315,14 @@
           "output_type": "stream",
           "text": [
             "    Acc: 0.963, LogLoss: 0.138, AUC: 0.985\n",
-            "  Training BinaryBART...\n"
+            "  Training ProbitBART...\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:08<00:00, 112.50it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:08<00:00, 112.28it/s]\n"
           ]
         },
         {
@@ -321,16 +337,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 93.43it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:08<00:00, 111.42it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.963, LogLoss: 0.133, AUC: 0.991\n",
-            "  Training Bartz...\n",
-            "    Acc: 0.944, LogLoss: 0.117, AUC: 0.994\n"
+            "    Acc: 0.963, LogLoss: 0.133, AUC: 0.991\n"
           ]
         }
       ],
@@ -347,10 +361,10 @@
         "    models = {\n",
         "        \"RFClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
         "        \"RFRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
+        "        \"Bartz\": \"placeholder\",\n",
         "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"Bartz\": \"placeholder\"\n",
+        "        \"ProbitBART\": ProbitBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE)\n",
         "    }\n",
         "    \n",
         "    for model_name, model in models.items():\n",
@@ -370,47 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n",
-        "for dataset_name, (X, y) in datasets.items():\n",
-        "    print(f\"\\n=== Testing on {dataset_name} ===\")\n",
-        "    \n",
-        "    # Split data\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(\n",
-        "        X, y, test_size=0.3, random_state=RANDOM_STATE, stratify=y\n",
-        "    )\n",
-        "    \n",
-        "    # Define models\n",
-        "    models = {\n",
-        "        \"RFClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
-        "        \"RFRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
-        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"Bartz\": \"placeholder\"\n",
-        "    }\n",
-        "    \n",
-        "    for model_name, model in models.items():\n",
-        "        print(f\"  Training {model_name}...\")\n",
-        "        \n",
-        "        X_tr, X_te = X_train, X_test\n",
-        "        \n",
-        "        if(debug == True):\n",
-        "            continue    \n",
-        "        metrics = evaluate_model(model, model_name, X_tr, X_te, y_train, y_test)\n",
-        "        \n",
-        "        result = {'Dataset': dataset_name, 'Model': model_name, **metrics}\n",
-        "        results.append(result)\n",
-        "        \n",
-        "        print(f\"    Acc: {metrics['Accuracy']:.3f}, LogLoss: {metrics['LogLoss']:.3f}, AUC: {metrics['AUC']:.3f}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -424,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -433,7 +407,7 @@
         "\n",
         "    %prun -s cumtime -D temp_profile.prof -q record_evaluation_results()\n",
         "\n",
-        "    fname = \"profile_logbart9\"\n",
+        "    fname = \"profile_logisticbart\"\n",
         "\n",
         "    !mv temp_profile.prof {fname}.prof\n",
         "    !gprof2dot -f pstats {fname}.prof -o {fname}.dot\n",
@@ -447,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -460,11 +434,11 @@
             "============================================================\n",
             "\n",
             "Accuracy:\n",
-            "Model          Bartz  BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Model          Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
             "Dataset                                                                     \n",
-            "Breast Cancer  0.947       0.936        0.936         0.965         0.924   \n",
-            "Synthetic      0.883       0.808        0.867         0.867         0.900   \n",
-            "Wine Binary    0.944       0.815        0.963         0.963         0.926   \n",
+            "Breast Cancer  0.947        0.936         0.965       0.936         0.924   \n",
+            "Synthetic      0.883        0.867         0.867       0.808         0.900   \n",
+            "Wine Binary    0.944        0.963         0.963       0.815         0.926   \n",
             "\n",
             "Model          RFRegressor  \n",
             "Dataset                     \n",
@@ -473,11 +447,11 @@
             "Wine Binary          0.926  \n",
             "\n",
             "AUC:\n",
-            "Model          Bartz  BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Model          Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
             "Dataset                                                                     \n",
-            "Breast Cancer  0.991       0.988        0.984         0.991         0.920   \n",
-            "Synthetic      0.949       0.875        0.952         0.936         0.900   \n",
-            "Wine Binary    0.994       0.986        0.985         0.991         0.903   \n",
+            "Breast Cancer  0.991        0.984         0.991       0.988         0.920   \n",
+            "Synthetic      0.949        0.952         0.936       0.875         0.900   \n",
+            "Wine Binary    0.994        0.985         0.991       0.986         0.903   \n",
             "\n",
             "Model          RFRegressor  \n",
             "Dataset                     \n",
@@ -486,11 +460,11 @@
             "Wine Binary          0.950  \n",
             "\n",
             "LogLoss:\n",
-            "Model          Bartz  BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Model          Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
             "Dataset                                                                     \n",
-            "Breast Cancer  0.130       0.264        0.146         0.113         1.575   \n",
-            "Synthetic      0.329       0.554        0.319         0.326         2.072   \n",
-            "Wine Binary    0.117       0.462        0.138         0.133         1.535   \n",
+            "Breast Cancer  0.130        0.146         0.113       0.264         1.575   \n",
+            "Synthetic      0.329        0.319         0.326       0.554         2.072   \n",
+            "Wine Binary    0.117        0.138         0.133       0.462         1.535   \n",
             "\n",
             "Model          RFRegressor  \n",
             "Dataset                     \n",
