Mitigate numerical instability in LogisticBART for large datasets
Use the log version of the GIG normalizing constant. Use an approximation of log Bessel K function when scipy.kv -> inf. This commit also improves the flow of the testing notebooks (test_binary and test_multi).

--- a/notebooks/test_multi.ipynb
+++ b/notebooks/test_multi.ipynb
@@ -31,10 +31,12 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "N_TREES = 25\n",
+    "N_TREES = 50\n",
     "NDPOST = 1000\n",
     "NSKIP = 200\n",
-    "RANDOM_STATE = 42"
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "old_settings = np.seterr(invalid='raise')"
    ]
   },
   {
@@ -61,6 +63,7 @@
     "                                         n_redundant=0, n_classes=4, n_clusters_per_class=1,\n",
     "                                         random_state=RANDOM_STATE)\n",
     "    \n",
+    "    \n",
     "    return {\n",
     "        \"Synthetic 3-class\": (X_syn, y_syn),\n",
     "        \"Iris\": (X_iris, y_iris),\n",
@@ -72,6 +75,51 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset: Synthetic 3-class\n",
+      "X shape: (400, 8), y shape: (400,)\n",
+      "Class distribution: {0: 0.3375, 1: 0.33, 2: 0.3325}\n",
+      "Number of classes: 3\n",
+      "\n",
+      "Dataset: Iris\n",
+      "X shape: (150, 4), y shape: (150,)\n",
+      "Class distribution: {0: 0.3333333333333333, 1: 0.3333333333333333, 2: 0.3333333333333333}\n",
+      "Number of classes: 3\n",
+      "\n",
+      "Dataset: Wine\n",
+      "X shape: (178, 13), y shape: (178,)\n",
+      "Class distribution: {0: 0.33146067415730335, 1: 0.398876404494382, 2: 0.2696629213483146}\n",
+      "Number of classes: 3\n",
+      "\n",
+      "Dataset: Synthetic 4-class\n",
+      "X shape: (600, 10), y shape: (600,)\n",
+      "Class distribution: {0: 0.24666666666666667, 1: 0.24833333333333332, 2: 0.25666666666666665, 3: 0.24833333333333332}\n",
+      "Number of classes: 4\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "datasets = load_datasets()\n",
+    "results = []\n",
+    "\n",
+    "for name, (X, y) in datasets.items():\n",
+    "    # Print dataset shapes\n",
+    "    print(f\"Dataset: {name}\\nX shape: {X.shape}, y shape: {y.shape}\")\n",
+    "    # Print class distribution\n",
+    "    print(f\"Class distribution: {pd.Series(y).value_counts(normalize=True).sort_index().to_dict()}\")\n",
+    "    print(f\"Number of classes: {len(np.unique(y))}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,56 +162,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "old_settings = np.seterr(invalid='raise')\n",
-    "\n",
-    "datasets = load_datasets()\n",
-    "results = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset: Synthetic 3-class\n",
-      "X shape: (400, 8), y shape: (400,)\n",
-      "Class distribution: {0: 0.3375, 1: 0.33, 2: 0.3325}\n",
-      "Number of classes: 3\n",
-      "\n",
-      "Dataset: Iris\n",
-      "X shape: (150, 4), y shape: (150,)\n",
-      "Class distribution: {0: 0.3333333333333333, 1: 0.3333333333333333, 2: 0.3333333333333333}\n",
-      "Number of classes: 3\n",
-      "\n",
-      "Dataset: Wine\n",
-      "X shape: (178, 13), y shape: (178,)\n",
-      "Class distribution: {0: 0.33146067415730335, 1: 0.398876404494382, 2: 0.2696629213483146}\n",
-      "Number of classes: 3\n",
-      "\n",
-      "Dataset: Synthetic 4-class\n",
-      "X shape: (600, 10), y shape: (600,)\n",
-      "Class distribution: {0: 0.24666666666666667, 1: 0.24833333333333332, 2: 0.25666666666666665, 3: 0.24833333333333332}\n",
-      "Number of classes: 4\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for name, (X, y) in datasets.items():\n",
-    "    # Print dataset shapes\n",
-    "    print(f\"Dataset: {name}\\nX shape: {X.shape}, y shape: {y.shape}\")\n",
-    "    # Print class distribution\n",
-    "    print(f\"Class distribution: {pd.Series(y).value_counts(normalize=True).sort_index().to_dict()}\")\n",
-    "    print(f\"Number of classes: {len(np.unique(y))}\")\n",
-    "    print()"
+    "metrics = None\n",
+    " \n",
+    "def record_evaluation_results(dataset_name, X, y):\n",
+    "    global metrics\n",
+    "    \n",
+    "    print(f\"\\n=== Testing on {dataset_name} ===\")\n",
+    "    \n",
+    "    # Split data\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=0.3, random_state=RANDOM_STATE, stratify=y\n",
+    "    )\n",
+    "    \n",
+    "    # Define models\n",
+    "    models = {\n",
+    "        \"RFClassifier\": RandomForestClassifier(random_state=RANDOM_STATE),\n",
+    "        \"LogisticBART\": LogisticBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE)\n",
+    "    }\n",
+    "    \n",
+    "    for model_name, model in models.items():\n",
+    "        print(f\"  Training {model_name}...\")\n",
+    "        \n",
+    "        X_tr, X_te = X_train, X_test\n",
+    "        \n",
+    "        metrics = evaluate_model(model, model_name, X_tr, X_te, y_train, y_test)\n",
+    "        \n",
+    "        result = {'Dataset': dataset_name, 'Model': model_name, **metrics}\n",
+    "        results.append(result)\n",
+    "        \n",
+    "        print(f\"    Acc: {metrics['Accuracy']:.3f}, LogLoss: {metrics['LogLoss']:.3f}, AUC_OvR: {metrics['AUC_OvR']:.3f}\")"
    ]
   },
   {
@@ -186,14 +217,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 1200/1200 [00:17<00:00, 67.15it/s]\n"
+      "Iterations: 100%|██████████| 1200/1200 [00:35<00:00, 33.94it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Acc: 0.842, LogLoss: 0.371, AUC_OvR: 0.967\n",
+      "    Acc: 0.842, LogLoss: 0.369, AUC_OvR: 0.969\n",
       "\n",
       "=== Testing on Iris ===\n",
       "  Training RFClassifier...\n",
@@ -205,14 +236,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 1200/1200 [00:22<00:00, 53.52it/s]\n"
+      "Iterations: 100%|██████████| 1200/1200 [00:46<00:00, 25.62it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Acc: 0.911, LogLoss: 0.194, AUC_OvR: 0.993\n",
+      "    Acc: 0.911, LogLoss: 0.196, AUC_OvR: 0.991\n",
       "\n",
       "=== Testing on Wine ===\n",
       "  Training RFClassifier...\n",
@@ -224,14 +255,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 1200/1200 [00:15<00:00, 76.15it/s]\n"
+      "Iterations: 100%|██████████| 1200/1200 [00:33<00:00, 35.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Acc: 1.000, LogLoss: 0.155, AUC_OvR: 1.000\n",
+      "    Acc: 1.000, LogLoss: 0.149, AUC_OvR: 1.000\n",
       "\n",
       "=== Testing on Synthetic 4-class ===\n",
       "  Training RFClassifier...\n",
@@ -243,45 +274,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 1200/1200 [00:20<00:00, 57.18it/s]\n"
+      "Iterations: 100%|██████████| 1200/1200 [00:44<00:00, 26.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Acc: 0.833, LogLoss: 0.543, AUC_OvR: 0.954\n"
+      "    Acc: 0.828, LogLoss: 0.542, AUC_OvR: 0.954\n"
      ]
     }
    ],
    "source": [
-    "for dataset_name, (X, y) in datasets.items():\n",
-    "    print(f\"\\n=== Testing on {dataset_name} ===\")\n",
-    "    \n",
-    "    # Split data\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "        X, y, test_size=0.3, random_state=RANDOM_STATE, stratify=y\n",
-    "    )\n",
-    "    \n",
-    "    # Define models\n",
-    "    models = {\n",
-    "        \"RFClassifier\": RandomForestClassifier(random_state=RANDOM_STATE),\n",
-    "        \"LogisticBART\": LogisticBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE)\n",
-    "    }\n",
-    "    \n",
-    "    for model_name, model in models.items():\n",
-    "        print(f\"  Training {model_name}...\")\n",
-    "        \n",
-    "        X_tr, X_te = X_train, X_test\n",
-    "        \n",
-    "        if(debug == True):\n",
-    "            continue    \n",
-    "        metrics = evaluate_model(model, model_name, X_tr, X_te, y_train, y_test)\n",
-    "        \n",
-    "        result = {'Dataset': dataset_name, 'Model': model_name, **metrics}\n",
-    "        results.append(result)\n",
-    "        \n",
-    "        print(f\"    Acc: {metrics['Accuracy']:.3f}, LogLoss: {metrics['LogLoss']:.3f}, AUC_OvR: {metrics['AUC_OvR']:.3f}\")"
+    "if debug == False:\n",
+    "    for dataset_name, (X, y) in datasets.items():\n",
+    "        record_evaluation_results(dataset_name, X, y)"
    ]
   },
   {
@@ -290,41 +297,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics = None\n",
-    " \n",
-    "def record_evaluation_results():\n",
-    "    global metrics\n",
-    "    X_tr, X_te = X_train, X_test\n",
-    "    metrics = evaluate_model(model, model_name, X_tr, X_te, y_train, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if debug == True:\n",
-    "    X_tr, X_te = X_train, X_test\n",
-    "    record_evaluation_results()\n",
-    "    \n",
-    "    # %prun -s cumtime -D temp_profile.prof -q record_evaluation_results()\n",
+    "    dataset_name, (X, y) = list(datasets.items())[-1]  # Last dataset for debugging\n",
+    "    record_evaluation_results(dataset_name, X, y)\n",
+    "\n",
+    "    # %prun -s cumtime -D temp_profile.prof -q record_evaluation_results(dataset_name, X, y)\n",
     "\n",
     "    # fname = \"profile_multiclass_logisticbart\"\n",
     "\n",
     "    # !mv temp_profile.prof {fname}.prof\n",
     "    # !gprof2dot -f pstats {fname}.prof -o {fname}.dot\n",
-    "    # !dot -Tpng {fname}.dot -o {fname}.png\n",
-    "    \n",
-    "    result = {'Dataset': dataset_name, 'Model': model_name, **metrics}\n",
-    "    results.append(result)\n",
-    "    \n",
-    "    print(f\"    Acc: {metrics['Accuracy']:.3f}, LogLoss: {metrics['LogLoss']:.3f}\")"
+    "    # !dot -Tpng {fname}.dot -o {fname}.png"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -341,22 +329,22 @@
       "Dataset                                      \n",
       "Iris                      0.911         0.889\n",
       "Synthetic 3-class         0.842         0.850\n",
-      "Synthetic 4-class         0.833         0.844\n",
+      "Synthetic 4-class         0.828         0.844\n",
       "Wine                      1.000         1.000\n",
       "\n",
       "LogLoss:\n",
       "Model              LogisticBART  RFClassifier\n",
       "Dataset                                      \n",
-      "Iris                      0.194         0.194\n",
-      "Synthetic 3-class         0.371         0.416\n",
-      "Synthetic 4-class         0.543         0.557\n",
-      "Wine                      0.155         0.130\n",
+      "Iris                      0.196         0.194\n",
+      "Synthetic 3-class         0.369         0.416\n",
+      "Synthetic 4-class         0.542         0.557\n",
+      "Wine                      0.149         0.130\n",
       "\n",
       "AUC_OvR:\n",
       "Model              LogisticBART  RFClassifier\n",
       "Dataset                                      \n",
-      "Iris                      0.993         0.989\n",
-      "Synthetic 3-class         0.967         0.961\n",
+      "Iris                      0.991         0.989\n",
+      "Synthetic 3-class         0.969         0.961\n",
       "Synthetic 4-class         0.954         0.968\n",
       "Wine                      1.000         1.000\n"
      ]
