--- a/benchmarks/real1_Abalone.ipynb
+++ b/benchmarks/real1_Abalone.ipynb
@@ -432,7 +432,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:  66%|██████▋   | 266/400 [02:19<01:11,  1.89it/s]"
+      "Iterations: 100%|██████████| 400/400 [03:25<00:00,  1.95it/s]\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 100/400 P_grow=0.53 P_prune=0.47 A_grow=0.30 A_prune=0.30 (burnin)\n",
+      "Iteration 200/400 P_grow=0.53 P_prune=0.47 A_grow=0.28 A_prune=0.22\n",
+      "Iteration 300/400 P_grow=0.48 P_prune=0.52 A_grow=0.24 A_prune=0.25\n",
+      "Iteration 400/400 P_grow=0.57 P_prune=0.43 A_grow=0.24 A_prune=0.41\n"
      ]
     }
    ],
