--- a/notebooks/bandit/test_bandit.ipynb
+++ b/notebooks/bandit/test_bandit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "\n",
     "from bart_playground.bandit.basic_bart import BARTTSAgent\n",
     "from bart_playground.bandit.bcf_agent import BCFAgent\n",
-    "from bart_playground.bandit.test_util import *"
+    "from bart_playground.bandit.sim_util import *"
    ]
   },
   {
@@ -127,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "btpg",
+   "display_name": "bartpg",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
