Change from informed proposals to Multiple-try MH

--- a/notebooks/01_debug copy.ipynb
+++ b/notebooks/01_debug copy.ipynb
@@ -46,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proposal_probs = {\"informed_grow\": 0.25, \"informed_prune\": 0.25, \"informed_change\": 0.4, \"informed_swap\": 0.1}\n",
-    "#proposal_probs = {\"informed_grow\": 0.5, \"informed_prune\": 0.5}\n",
+    "proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
+    "#proposal_probs = {\"multi_grow\": 0.5, \"multi_prune\": 0.5}\n",
     "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
@@ -57,25 +57,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bart = InformedBART(ndpost=50, nskip=0, n_trees=100, proposal_probs=proposal_probs, informed_max_samples=10)\n",
-    "# bart.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 60/60 [00:36<00:00,  1.63it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:28<00:00,  2.09it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:23<00:00,  2.57it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:20<00:00,  2.89it/s]\n"
+      "Iterations: 100%|██████████| 60/60 [00:52<00:00,  1.14it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:45<00:00,  1.30it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:46<00:00,  1.28it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:46<00:00,  1.30it/s]\n"
      ]
     },
     {
@@ -87,16 +77,16 @@
       "Coordinates:\n",
       "  * eps_sigma2_dim_0  (eps_sigma2_dim_0) int32 4B 0\n",
       "Data variables:\n",
-      "    eps_sigma2        (eps_sigma2_dim_0) float64 8B 1.346\n"
+      "    eps_sigma2        (eps_sigma2_dim_0) float64 8B 1.195\n"
      ]
     }
    ],
    "source": [
     "n_chains = 4\n",
     "chains = []\n",
-    "proposal_probs = {\"informed_grow\": 0.25, \"informed_prune\": 0.25, \"informed_change\": 0.4, \"informed_swap\": 0.1}\n",
+    "proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
     "for i in range(n_chains):\n",
-    "    bart = InformedBART(ndpost=50, nskip=10, n_trees=100, proposal_probs=proposal_probs, informed_max_samples=10, random_state=i)\n",
+    "    bart = MultiBART(ndpost=50, nskip=10, n_trees=100, proposal_probs=proposal_probs, multi_tries=10, random_state=i)\n",
     "    bart.fit(X_train, y_train)\n",
     "    sigmas = [trace.global_params['eps_sigma2'] for trace in bart.sampler.trace]\n",
     "    chains.append(sigmas)\n",
@@ -110,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-17 03:35:47,165:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-06-18 02:36:49,261:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-06-17 03:35:47,167:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-06-18 02:36:49,263:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -146,19 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.029049483065367553,\n",
+       "{'bart': 0.024126903779610225,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02328283761397566}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,17 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 30.78it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:02<00:00, 26.88it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 30.94it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:02<00:00, 27.64it/s]"
+      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 40.84it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 35.34it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 40.39it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 33.34it/s]"
      ]
     },
     {
@@ -234,7 +224,7 @@
     "chains = []\n",
     "proposal_probs = {\"grow\": 0.25, \"prune\": 0.25, \"change\": 0.4, \"swap\": 0.1}\n",
     "for i in range(n_chains):\n",
-    "    bart = InformedBART(ndpost=50, nskip=10, n_trees=100, proposal_probs=proposal_probs, informed_max_samples=10, random_state=i)\n",
+    "    bart = DefaultBART(ndpost=50, nskip=10, n_trees=100, proposal_probs=proposal_probs, random_state=i)\n",
     "    bart.fit(X_train, y_train)\n",
     "    sigmas = [trace.global_params['eps_sigma2'] for trace in bart.sampler.trace]\n",
     "    chains.append(sigmas)\n",
@@ -248,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +276,7 @@
        " 'btz': 0.02328283761397566}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
