--- a/notebooks/bandit/compare.ipynb
+++ b/notebooks/bandit/compare.ipynb
@@ -22,6 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ast import arg\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -30,7 +31,7 @@
     "\n",
     "from bart_playground.bandit.sim_util import *\n",
     "from compare_agents import (\n",
-    "    compare_agents_across_scenarios, print_summary_results, plot_comparison_results\n",
+    "    AgentSpec, compare_agents_across_scenarios, print_summary_results, plot_comparison_results\n",
     ")\n",
     "# from bart_playground.bandit.rome.rome_scenarios import HomogeneousScenario, NonlinearScenario"
    ]
@@ -90,31 +91,35 @@
     "# Create test scenarios\n",
     "np.random.seed(0)\n",
     "    \n",
-    "scenarios = {\n",
-    "    # \"Linear\": LinearScenario(P=4, K=3, sigma2=1.0),\n",
-    "    # \"LinearOffset\": LinearOffsetScenario(P=4, K=3, sigma2=1.0),\n",
-    "    # \"Offset\": OffsetScenario(P=4, K=3, sigma2=1.0),\n",
-    "    # \"Offset2\": OffsetScenario(P=4, K=3, sigma2=0.1),\n",
-    "    # \"Friedman\": FriedmanScenario(P=5, K=3, sigma2=1.0, lambda_val=15),\n",
-    "    # \"Sparse\": FriedmanScenario(P=50, K=3, sigma2=1.0, lambda_val=5),\n",
-    "    \n",
-    "    ## \"Isolet\": OpenMLScenario('isolet', version=1),\n",
-    "    #\"Magic\": OpenMLScenario('MagicTelescope', version=1),\n",
-    "    #\"Adult\": OpenMLScenario('adult', version=2),\n",
-    "    #\"Shuttle\": OpenMLScenario('shuttle', version=1),\n",
-    "    ## \"Letter\": OpenMLScenario('letter', version=1),\n",
-    "    \"Mushroom\": OpenMLScenario('mushroom', version=1),\n",
-    "    #\"Covertype\": OpenMLScenario('covertype', version=3),\n",
-    "    #\"MNIST\": OpenMLScenario('mnist_784', version=1),\n",
+    "scenario_factories = {\n",
+    "    # \"Linear\": lambda: LinearScenario(P=4, K=3, sigma2=1.0),\n",
+    "    # \"LinearOffset\": lambda: LinearOffsetScenario(P=4, K=3, sigma2=1.0),\n",
+    "    # \"Offset\": lambda: OffsetScenario(P=4, K=3, sigma2=1.0),\n",
+    "    # \"Offset2\": lambda: OffsetScenario(P=4, K=3, sigma2=0.1),\n",
+    "    # \"Friedman\": lambda: FriedmanScenario(P=5, K=3, sigma2=1.0, lambda_val=15),\n",
+    "    # \"Sparse\": lambda: FriedmanScenario(P=50, K=3, sigma2=1.0, lambda_val=5),\n",
+    "    ## \"Isolet\": lambda: OpenMLScenario('isolet', version=1),\n",
+    "    \"Magic\": lambda: OpenMLScenario('MagicTelescope', version=1),\n",
+    "    \"Adult\": lambda: OpenMLScenario('adult', version=2),\n",
+    "    \"Shuttle\": lambda: OpenMLScenario('shuttle', version=1),\n",
+    "    ## \"Letter\": lambda: OpenMLScenario('letter', version=1),\n",
+    "    \"Mushroom\": lambda: OpenMLScenario('mushroom', version=1),\n",
+    "    \"Covertype\": lambda: OpenMLScenario('covertype', version=3),\n",
+    "    \"MNIST\": lambda: OpenMLScenario('mnist_784', version=1),\n",
     "}\n",
     "\n",
+    "# Parse command-line arguments\n",
     "args = sys.argv[1:]\n",
-    "scenarios = {k: v for k, v in scenarios.items() if k in args}\n",
-    "if len(scenarios) == 0:\n",
-    "    print(\"No scenarios specified, using Mushroom.\")\n",
-    "    scenarios = {'Mushroom': OpenMLScenario('mushroom', version=1)}\n",
-    "    \n",
-    "rep_dataset = list(scenarios.keys())[0]\n",
+    "\n",
+    "# Determine which scenarios to run; default to Mushroom if none or invalid\n",
+    "if len(args) == 0 or not any(arg in scenario_factories for arg in args):\n",
+    "    print(\"No valid scenarios specified, using Mushroom.\")\n",
+    "    args = ['Mushroom']\n",
+    "\n",
+    "selected_keys = [k for k in scenario_factories if k in args]\n",
+    "scenarios = {key: scenario_factories[key]() for key in selected_keys}\n",
+    "\n",
+    "rep_dataset = selected_keys[0]\n",
     "log_encoding = 'native' if rep_dataset in ['Adult', 'Magic', 'Mushroom'] else 'multi' \n",
     "\n",
     "np.random.seed(0)\n",
@@ -127,123 +132,48 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "from bart_playground.bandit.bart_agent import BARTAgent, LogisticBARTAgent, MultiChainBARTAgent\n",
     "from bart_playground.bandit.ensemble_agent import EnsembleAgent\n",
     "from bart_playground.bart import DefaultBART, LogisticBART\n",
     "\n",
-    "def class_to_agents(sim, scenario_K, scenario_P, agent_classes: List[Any]) -> List[BanditAgent]:\n",
-    "    \"\"\"\n",
-    "    Convert agent classes to instances.\n",
-    "    \"\"\"\n",
-    "        # Create agents with different seeds for this simulation\n",
-    "    sim_agents = []\n",
-    "    for agent_cls in agent_classes:\n",
-    "        if agent_cls == BCFAgent:\n",
-    "            agent = BCFAgent(\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P,\n",
-    "                nskip=100,\n",
-    "                ndpost=100,\n",
-    "                nadd=3,\n",
-    "                nbatch=1,\n",
-    "                random_state=1000 + sim\n",
-    "            )\n",
-    "        elif agent_cls == BARTAgent:\n",
-    "            agent = BARTAgent(\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P,\n",
-    "                nskip=50,\n",
-    "                ndpost=50,\n",
-    "                nadd=5,\n",
-    "                random_state=1000 + sim,\n",
-    "                encoding='multi'\n",
-    "            )\n",
-    "        elif agent_cls == LogisticBARTAgent:\n",
-    "            agent = LogisticBARTAgent(\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P,\n",
-    "                nskip=50,\n",
-    "                ndpost=50,\n",
-    "                nadd=1,\n",
-    "                random_state=1000 + sim,\n",
-    "                encoding=log_encoding\n",
-    "            )\n",
-    "        elif agent_cls == MultiChainBARTAgent:\n",
-    "            agent = MultiChainBARTAgent(\n",
-    "                bart_class=LogisticBART,\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P,\n",
-    "                nskip=50,\n",
-    "                ndpost=50,\n",
-    "                nadd=2,\n",
-    "                random_state=1000 + sim,\n",
-    "                encoding=log_encoding\n",
-    "            )\n",
-    "        elif agent_cls == EnsembleAgent:\n",
-    "            agent = EnsembleAgent(\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P,\n",
-    "                bcf_kwargs = dict(nskip=100,\n",
-    "                ndpost=10,\n",
-    "                nadd=2,\n",
-    "                random_state=1000 + sim),\n",
-    "                linear_ts_kwargs = dict(v=1)\n",
-    "            )\n",
-    "        elif agent_cls == BCFAgentPSOff:\n",
-    "            agent = BCFAgentPSOff(\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P,\n",
-    "                nskip=100,\n",
-    "                ndpost=10,\n",
-    "                nadd=2,\n",
-    "                nbatch=1,\n",
-    "                random_state=1000 + sim\n",
-    "            )\n",
-    "        elif agent_cls == LinearTSAgent:\n",
-    "            agent = LinearTSAgent(\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P,\n",
-    "                v = 1\n",
-    "            )\n",
-    "        # elif agent_cls == RoMEAgent:\n",
-    "        #     agent = RoMEAgent(\n",
-    "        #         n_arms=scenario_K,\n",
-    "        #         n_features=scenario_P,\n",
-    "        #         featurize=_featurize,\n",
-    "        #         t_max=n_draws,\n",
-    "        #         pool_users=False\n",
-    "        #     )\n",
-    "        # elif agent_cls == StandardTSAgent:\n",
-    "        #     agent = StandardTSAgent(\n",
-    "        #         n_arms=scenario_K,\n",
-    "        #         n_features=scenario_P,\n",
-    "        #         featurize=_featurize\n",
-    "        #     )\n",
-    "        # elif agent_cls == ActionCenteredTSAgent:\n",
-    "        #     agent = ActionCenteredTSAgent(\n",
-    "        #         n_arms=scenario_K,\n",
-    "        #         n_features=scenario_P,\n",
-    "        #         featurize=_featurize\n",
-    "        #     )\n",
-    "        # elif agent_cls == IntelligentPoolingAgent:\n",
-    "        #     agent = IntelligentPoolingAgent(\n",
-    "        #         n_arms=scenario_K,\n",
-    "        #         n_features=scenario_P,\n",
-    "        #         featurize=_featurize,\n",
-    "        #         t_max=n_draws\n",
-    "        #     )\n",
-    "        else:\n",
-    "            # For other agents, just initialize with standard params\n",
-    "            agent = agent_cls(\n",
-    "                n_arms=scenario_K,\n",
-    "                n_features=scenario_P\n",
-    "            )\n",
-    "        sim_agents.append(agent)\n",
-    "    \n",
-    "    return sim_agents"
+    "all_agent_specs: List[AgentSpec] = [\n",
+    "    (\"BCF\",        BCFAgent,        {'nskip':100, 'ndpost':100, 'nadd':3, 'nbatch':1, 'random_state':1000}),\n",
+    "    (\"BART\",       BARTAgent,       {'nskip':50,  'ndpost':50,  'nadd':5,                   'random_state':1000, 'encoding':'multi'}),\n",
+    "    (\"LogisticBART\", LogisticBARTAgent,{\n",
+    "        'nskip':50,\n",
+    "        'ndpost':50,\n",
+    "        'nadd':1,\n",
+    "        'random_state':1000,\n",
+    "        'encoding':log_encoding\n",
+    "    }),\n",
+    "    (\"MCBART\",     MultiChainBARTAgent,{\n",
+    "        'bart_class': LogisticBART,\n",
+    "        'n_ensembles': 4,\n",
+    "        'n_trees': 100,\n",
+    "        'nskip': 50,\n",
+    "        'ndpost': 50,\n",
+    "        'nadd': 2,\n",
+    "        'random_state': 1000,\n",
+    "        'encoding': log_encoding\n",
+    "    }),\n",
+    "    (\"Ensemble\",   EnsembleAgent,   {\n",
+    "        'bcf_kwargs':       dict(nskip=100, ndpost=10, nadd=2, random_state=1000),\n",
+    "        'linear_ts_kwargs': dict(v=1)\n",
+    "    }),\n",
+    "    (\"BCF_PSOff\",  BCFAgentPSOff,   {'nskip':100, 'ndpost':10, 'nadd':2, 'nbatch':1, 'random_state':1000}),\n",
+    "    (\"LinearTS\",   LinearTSAgent,   {'v':1}),\n",
+    "    (\"LinearTS2\",  LinearTSAgent2,  {}),\n",
+    "    # commented out for on-demand testing:\n",
+    "    # (\"RoME\",             RoMEAgent,              {'featurize':_featurize, 't_max':n_draws, 'pool_users':False}),\n",
+    "    # (\"StandardTS\",       StandardTSAgent,        {'featurize':_featurize}),\n",
+    "    # (\"ActionCenteredTS\", ActionCenteredTSAgent,  {'featurize':_featurize}),\n",
+    "    # (\"IntelligentPooling\", IntelligentPoolingAgent, {'featurize':_featurize, 't_max':n_draws}),\n",
+    "]"
    ]
   },
   {
@@ -252,30 +182,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_simulations = 3  # Number of simulations per scenario\n",
+    "\n",
+    "# Filter agents to include only those we want to test\n",
+    "agent_specs = [agent for agent in all_agent_specs if agent[0] in [\"MCBART\", \"LinearTS\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc0476e5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "n_simulations = 1  # Number of simulations per scenario\n",
     "max_draws = 300      # Number of draws per simulation\n",
     "\n",
     "def call_func():\n",
-    "    agent_dict = {\n",
-    "        \"LinearTS\": LinearTSAgent,\n",
-    "        \"LinearTS2\": LinearTSAgent2,\n",
-    "        \"LogisticBART\": LogisticBARTAgent,\n",
-    "        # \"MultiChainBART\": MultiChainBARTAgent,\n",
-    "        # \"Neural\": NeuralTSDiagAgent,\n",
-    "        # \"MBCF+Linear\": BCFAgentPSOff,\n",
-    "        # \"METS\": METSAgent,\n",
-    "        # \"HierTS\": HierTSAgent\n",
-    "    }\n",
-    "    agent_classes = list(agent_dict.values())\n",
-    "    agent_names = list(agent_dict.keys())\n",
     "    return compare_agents_across_scenarios(\n",
     "        scenarios=scenarios,\n",
+    "        agent_specs=agent_specs,\n",
     "        n_simulations=n_simulations,\n",
     "        max_draws=max_draws,\n",
-    "        agent_classes=agent_classes,\n",
-    "        agent_names=agent_names,\n",
-    "        parallel=False,\n",
-    "        class_to_agents=class_to_agents\n",
+    "        parallel=False\n",
     "    )"
    ]
   },
@@ -474,7 +404,9 @@
     }
    ],
    "source": [
-    "print_summary_results(results)"
+    "print_summary_results(results)\n",
+    "# Hihihi\n",
+    "# Hihi"
    ]
   },
   {
@@ -504,14 +436,13 @@
    "outputs": [],
    "source": [
     "# Create results directory if it doesn't exist\n",
-    "results_dir = \"./results/agent_comparison_final_test\"\n",
+    "results_dir = \"./results/agent_comparison_test\"\n",
     "if not os.path.exists(results_dir):\n",
     "    os.makedirs(results_dir)\n",
     "\n",
     "import pickle\n",
     "appendix_name = list(scenarios.keys())[0]  # Use the first scenario name as appendix\n",
     "result_filename = os.path.join(results_dir, f\"result_{appendix_name}.pkl\")\n",
-    "\n",
     "pickle.dump(results, open(result_filename, \"wb\"))"
    ]
   },
@@ -544,6 +475,11 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "cell_metadata_filter": "-all",
+   "formats": "ipynb,py:percent",
+   "main_language": "python"
+  },
   "kernelspec": {
    "display_name": "bartpg",
    "language": "python",
